# myQQ

./: .gitignore  CMakeLists.txt  README.md  tt.txt
3rdLib/demo/: demo_cereal.cpp
demo/: broClient.c  broServer.c  client_sel.c  demo_read_client.cpp  k_socket_include.h  mulClient.c  mulServer.c  server_epol.c  server_udp_epool.c  test_map.cpp  test_serilzation_error.cpp  udp_vector_info.cpp
include/: add.h  k_clip.h  k_socket_include.h  k_total_head.h  sub.h
libSrc/: CMakeLists.txt  sub.c
src/: CMakeLists.txt  demoServer.cpp  main.cpp
src/commandObj/: cmdCreateFactory.cpp  dataCmd.cpp  dataMsgCmd.cpp  friendshipChangeCmd.cpp  heartMsgCmd.cpp  heartRequestCmd.cpp  loginCmd.cpp  userChangeCmd.cpp
src/commandObj/demo/: 测试数据类基类指针.cpp  测试获取好友未读信息.cpp
src/commandObj/include/: cmdBase.h  cmdCreateFactory.h  dataCmd.h  dataCmdBase.h  dataMsgCmd.h  friendshipChangeCmd.h  heartMsgCmd.h  heartRequestCmd.h  loginCmd.h  notOperatorCmd.h  nullCmd.h  userChangeCmd.h
src/connectDb/: conPgsql.cpp  demo.cpp  otlUse.cpp
src/connectDb/include/: otlUse.h
src/correspondence/include/: ServerQQ.h
src/dataObj/: msg.cpp  msgData.cpp  user.cpp  userNotRecvMsg.cpp
src/dataObj/include/: _readme_msg_implement.txt  dataBase.h  msg.h  msgData.h  user.h  userNotRecvMsg.h
src/myClient/: clientQQ.cpp
src/myClient/include/: clientQQ.h
src/myObjInfo/: demo_user.cpp  msg.cpp  user.cpp
src/myObjInfo/include/: msg.h  user.h  userNotRecvMsg.h
src/myServer/: ServerQQ.c  demo.cpp  serverQQ.cpp
src/myServer/include/: ServerQQ.h
src/userInfo/: demo.cpp  user.cpp
src/userInfo/include/: user.h
